[Fabric] Fix linux font things