@@ -4,7 +4,6 @@ import me.earth.earthhack.api.module.Module;
 import me.earth.earthhack.api.module.util.Category;
 import me.earth.earthhack.api.setting.Setting;
 import me.earth.earthhack.api.setting.settings.BooleanSetting;
-import me.earth.earthhack.api.setting.settings.EnumSetting;
 import me.earth.earthhack.api.setting.settings.NumberSetting;
 import me.earth.earthhack.api.setting.settings.StringSetting;
 import me.earth.earthhack.impl.Earthhack;
@@ -13,7 +12,6 @@ import me.earth.earthhack.impl.gui.chat.components.SuppliedComponent;
 import me.earth.earthhack.impl.managers.Managers;
 import me.earth.earthhack.impl.managers.render.TextRenderer;
 import me.earth.earthhack.impl.modules.client.commands.Commands;
-import me.earth.earthhack.impl.modules.client.customfont.mode.FontStyle;
 import me.earth.earthhack.impl.util.text.ChatIDs;
 import me.earth.earthhack.impl.util.text.ChatUtil;
 import me.earth.earthhack.impl.util.text.TextColor;
@@ -25,10 +23,12 @@ import net.minecraft.text.Text;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
-import java.nio.file.FileSystems;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 public class FontMod extends Module {
@@ -37,8 +37,6 @@ public class FontMod extends Module {
             register(new StringSetting("Font", "Verdana"));
     public final Setting<Float> fontSize =
             register(new NumberSetting<>("Size", 9.0f, 4.0f, 12.0f));
-//    public final Setting<FontStyle> fontStyle = // TODO: This!
-//            register(new EnumSetting<>("FontStyle", FontStyle.Plain));
     public final Setting<Float> shadowOffset =
             register(new NumberSetting<>("ShadowOffset", 0.6f, 0.2f, 1.0f));
     public final Setting<Boolean> blurShadow =
@@ -58,8 +56,10 @@ public class FontMod extends Module {
 
         fontName.addObserver(event -> {
             if (!event.getValue().isEmpty()) {
-                if (!getAllFonts().contains(event.getValue().toLowerCase() + ".ttf")) {
+                if (!isFontAvailable(event.getValue())) {
                     ChatUtil.sendMessage("Font not found, loading fallback!", getName());
+                } else {
+                    ChatUtil.sendMessage("Font " + event.getValue() + " found and loaded!", getName());
                 }
                 TextRenderer.FONTS.reInit();
             }
@@ -69,39 +69,63 @@ public class FontMod extends Module {
     }
 
     public byte[] getSelectedFont() {
-        try (FileInputStream fileInputStream = new FileInputStream(getOSFontPath() + FileSystems.getDefault().getSeparator() + fontName.getValue().toLowerCase() + ".ttf")) {
-            return fileInputStream.readAllBytes();
-        } catch (IOException e) {
-            ChatUtil.sendMessage("Font not found, loading fallback!", getName());
-            try {
-                return Earthhack.class.getClassLoader().getResourceAsStream("assets/earthhack/fallback-font-corbel.ttf").readAllBytes();
-            } catch (IOException ex) {
-                throw new RuntimeException(ex);
+        Optional<Path> fontPath = getOSFontPaths().stream()
+                .map(path -> Paths.get(path, fontName.getValue().toLowerCase() + ".ttf"))
+                .filter(Files::exists)
+                .findFirst();
+
+        if (!fontPath.isPresent()) {
+            fontPath = getOSFontPaths().stream()
+                    .map(path -> Paths.get(path, fontName.getValue() + ".TTF"))
+                    .filter(Files::exists)
+                    .findFirst();
+        }
+
+        try {
+            if (fontPath.isPresent()) {
+                ChatUtil.sendMessage("Using font: " + fontPath.get().toString(), getName());
+                return Files.readAllBytes(fontPath.get());
+            } else {
+                ChatUtil.sendMessage("Font not found, loading fallback!", getName());
+                return Earthhack.class.getClassLoader()
+                        .getResourceAsStream("assets/earthhack/fallback-font-corbel.ttf")
+                        .readAllBytes();
             }
+        } catch (IOException e) {
+            throw new RuntimeException("Failed to load font", e);
         }
     }
 
-    private String getOSFontPath() {
+    private List<String> getOSFontPaths() {
+        List<String> paths = new ArrayList<>();
         String os = System.getProperty("os.name").toLowerCase();
-
         if (os.contains("win")) {
-            return "C:\\Windows\\Fonts";
+            paths.add("C:\\Windows\\Fonts");
+        } else if (os.contains("darwin")) {
+            paths.add("/Library/Fonts/");
+        } else if (os.contains("linux")) {
+            paths.add(System.getProperty("user.home") + "/.local/share/fonts");
+            paths.add("/usr/share/fonts");
+            paths.add("/usr/share/fonts/TTF"); // Added TTF directory
+            paths.add("/usr/local/share/fonts");
         }
-        else if (os.contains("darwin")) {
-            return "/Library/Fonts/";
-        }
-        else if (os.contains("linux")) {
-            return System.getProperty("user.home") + "/.local/share/fonts";
-        }
-        return "none";
+        return paths;
+    }
+
+    private boolean isFontAvailable(String fontName) {
+        String lowerCaseFontName = fontName.toLowerCase() + ".ttf";
+        String upperCaseFontName = fontName + ".TTF";
+        return getAllFonts().stream()
+                .anyMatch(font -> font.equalsIgnoreCase(lowerCaseFontName) || font.equalsIgnoreCase(upperCaseFontName));
     }
 
     private List<String> getAllFonts() {
-        String path = getOSFontPath();
         List<String> fonts = new ArrayList<>();
-        if (!path.equals("none")) {
+        for (String path : getOSFontPaths()) {
             File directory = new File(path);
-            fonts = getFontsInDirectory(directory);
+            if (directory.exists() && directory.isDirectory()) {
+                fonts.addAll(getFontsInDirectory(directory));
+            }
         }
         return fonts;
     }
@@ -113,7 +137,7 @@ public class FontMod extends Module {
             for (File file : files) {
                 if (file.isDirectory()) {
                     fonts.addAll(getFontsInDirectory(file));
-                } else if (file.getName().endsWith(".ttf")) {
+                } else if (file.getName().toLowerCase().endsWith(".ttf") || file.getName().endsWith(".TTF")) {
                     fonts.add(file.getName());
                 }
             }
@@ -124,8 +148,11 @@ public class FontMod extends Module {
     public void sendFonts() {
         MutableText component =
                 Text.empty().append("Available Fonts: ");
-        
-        List<String> fonts = getAllFonts().stream().map(x -> x.replace(".ttf", "")).toList();
+
+        List<String> fonts = getAllFonts().stream()
+                .map(x -> x.replace(".ttf", "").replace(".TTF", ""))
+                .sorted(String::compareToIgnoreCase)
+                .collect(Collectors.toList());
 
         for (int i = 0; i < fonts.size(); i++) {
             String font = fonts.get(i);
@@ -133,7 +160,7 @@ public class FontMod extends Module {
                 int finalI = i;
                 component.append(
                         new SuppliedComponent(() ->
-                                (font.equals(fontName.getValue())
+                                (font.equalsIgnoreCase(fontName.getValue())
                                         ? TextColor.GREEN
                                         : TextColor.RED)
                                         + font
@@ -142,11 +169,9 @@ public class FontMod extends Module {
                                         : ", "))
                                 .setStyle(Style.EMPTY.withClickEvent(
                                         new SmartClickEvent
-                                                (ClickEvent.Action.RUN_COMMAND)
-                                        {
+                                                (ClickEvent.Action.RUN_COMMAND) {
                                             @Override
-                                            public String getValue()
-                                            {
+                                            public String getValue() {
                                                 return Commands.getPrefix()
                                                         + "CustomFont Font "
                                                         + "\"" + font + "\"";
